[gd_scene load_steps=16 format=3 uid="uid://ufwxyn7hp2hp"]

[ext_resource type="Script" uid="uid://2264tym07sw2" path="res://scenes/main_menu/main_menu.gd" id="1_0qkqs"]
[ext_resource type="Theme" uid="uid://co64ypv6r7ng" path="res://assets/themes/main_theme.tres" id="1_6ufdq"]
[ext_resource type="PackedScene" uid="uid://fui6i0duxakt" path="res://assets/models/sword/sword.glb" id="3_6ufdq"]
[ext_resource type="Shader" uid="uid://di3tglukerojs" path="res://assets/shaders/chromatic.gdshader" id="3_tbubb"]
[ext_resource type="Texture2D" uid="uid://d2iie7lfsw5n5" path="res://assets/models/character/Sword.png" id="4_pm07s"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_pm07s"]
color = Color(1, 1, 1, 1)
grow_begin = -40.0
grow_end = -40.0
thickness = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q0knb"]
shader = ExtResource("3_tbubb")
shader_parameter/r_displacement = Vector2(3, 0)
shader_parameter/g_displacement = Vector2(0, 0)
shader_parameter/b_displacement = Vector2(-3, 0)

[sub_resource type="LabelSettings" id="LabelSettings_pm07s"]
font_size = 575
font_color = Color(0.64705884, 0.023529412, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0qkqs"]
font_size = 575

[sub_resource type="Environment" id="Environment_0qkqs"]
background_mode = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pm07s"]
render_priority = 1
transparency = 1
shading_mode = 0
grow = true
grow_amount = 0.047
stencil_mode = 3
stencil_flags = 1
stencil_compare = 5
metadata/_stencil_owned = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tbubb"]
next_pass = SubResource("StandardMaterial3D_pm07s")
albedo_texture = ExtResource("4_pm07s")
texture_filter = 0
stencil_mode = 1
stencil_flags = 2
stencil_color = Color(1, 1, 1, 1)
stencil_outline_thickness = 0.047

[sub_resource type="Animation" id="Animation_tbubb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.31625363, -8.659561e-09, 1.8325957)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.6461549, 0.98375034, -2.8771386)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../../Control:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../../Control:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_pm07s"]
resource_name = "idle"
length = 15.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sword:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 9.133333, 15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.31625363, -8.659561e-09, 1.8325957), Vector3(0.064767, 0.0229903, 1.9042623), Vector3(0.31625363, -8.659561e-09, 1.8325957)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sword:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5.9333334, 15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1.6461549, 0.98375034, -2.8771386), Vector3(1.646, 0.78, -2.877), Vector3(1.6461549, 0.98375034, -2.8771386)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../../Control:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3.4, 7.266667, 11.133333, 15),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 20), Vector2(0, 0), Vector2(0, 20), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../../Control:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 5.994331, 15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.0471238898038467, 0.0471238898038467, -0.0471238898038467]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q0knb"]
_data = {
&"RESET": SubResource("Animation_tbubb"),
&"idle": SubResource("Animation_pm07s")
}

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6ufdq")
script = ExtResource("1_0qkqs")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -246.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_pm07s")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_6ufdq")
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
z_index = 10
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="ExitButton" type="Button" parent="VBoxContainer/MarginContainer/Buttons"]
custom_minimum_size = Vector2(64, 128)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "EXIT"

[node name="PlayButton" type="Button" parent="VBoxContainer/MarginContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "PLAY"

[node name="DontPlayButton" type="Button" parent="VBoxContainer/MarginContainer/Buttons"]
custom_minimum_size = Vector2(64, 128)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SETTINGS"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_pm07s")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = 10
material = SubResource("ShaderMaterial_q0knb")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(960, 540)
mouse_filter = 2

[node name="Title2" type="Label" parent="Control"]
z_index = -5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "sonorus"
label_settings = SubResource("LabelSettings_pm07s")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Label" parent="Control"]
z_index = -5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2
text = "sonorus"
label_settings = SubResource("LabelSettings_0qkqs")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
z_index = -2
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch = true
stretch_shrink = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
anisotropic_filtering_level = 0
size = Vector2i(960, 540)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.39983225, 0)
environment = SubResource("Environment_0qkqs")

[node name="Node3D" type="Node3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.492074, -1.6296669)

[node name="OmniLight3D" type="OmniLight3D" parent="SubViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.3594236, 1.1245952, -0.37896764)
light_energy = 0.65

[node name="OmniLight3D3" type="OmniLight3D" parent="SubViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.5696187, 1.1245952, -4.9184055)
light_color = Color(1, 0.011764706, 0, 1)
light_energy = 13.765

[node name="OmniLight3D4" type="OmniLight3D" parent="SubViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.0962238, 1.1245952, -4.9184055)
light_color = Color(1, 0.011764706, 0, 1)
light_energy = 5.79

[node name="OmniLight3D5" type="OmniLight3D" parent="SubViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.638714, 0.37711334, -4.0478377)
light_color = Color(1, 0.011764706, 0, 1)
light_energy = 32.76

[node name="OmniLight3D2" type="OmniLight3D" parent="SubViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.1259592, 1.1245952, 1.0635892)
light_energy = 2.03

[node name="sword" parent="SubViewportContainer/SubViewport/Node3D" instance=ExtResource("3_6ufdq")]
transform = Transform3D(-0.2588191, -0.9659258, -8.230109e-09, 0.9180231, -0.24598348, -0.3110082, 0.3004109, -0.08049485, 0.9504072, 1.6461549, 0.98375034, -2.8771386)

[node name="Handle" parent="SubViewportContainer/SubViewport/Node3D/sword" index="0"]
material_override = SubResource("StandardMaterial3D_tbubb")

[node name="MenuIdle" type="AnimationPlayer" parent="SubViewportContainer/SubViewport/Node3D"]
libraries = {
&"": SubResource("AnimationLibrary_q0knb")
}

[connection signal="pressed" from="VBoxContainer/MarginContainer/Buttons/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/Buttons/PlayButton" to="." method="_on_play_button_pressed"]

[editable path="SubViewportContainer/SubViewport/Node3D/sword"]
